--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "pkg.json": "^2.0.7"
   },
